--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>2048</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link type="Image/x-icon" href="./favicon.ico" rel="icon">
+  <title>2048</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js" type="module"></script>
 </head>
+
 <body>
-    <div id="game-board"></div>
-
-
-
-
-    <script src="js/main.js" type="module"></script>
+  <div id="game-board">
+  </div>
 </body>
+
 </html>
